--- a/styles/style.css
+++ b/styles/style.css
@@ -315,6 +315,33 @@ button:focus{
     .buttons button {
          margin-top: 0px;
       }
+}
 
-    
+@media (max-width: 350px) {
+   h1 {
+      font-size: 30px;
+      margin: 8px 0;
+   }
+
+   .buttons {
+      margin-top: 8px;
+      width: 90%;
+      flex-direction: row;
+      justify-content: space-between;
+      /* align-items: center;
+      text-align: center; */
+   }
+   
+   button {
+      /* text-align: center; */
+      padding: 10px;
+      width: 100%;
+      margin: 2px;
+      font-size: 12px;
+      /* text-align: center; */
+   }
+
+   .white {
+      border: 8px solid black;
+   }
 }
